--- a/harmonix.html
+++ b/harmonix.html
@@ -473,7 +473,7 @@
 
     <script>
         // Replace 'YOUR_UNSPLASH_API_KEY' with your actual Unsplash API key
-        const unsplashAPIKey = 'YFPqlSVn05x3toLp7uCsVBi4yD17gZaRs9518cpPZ5Y';
+        //const unsplashAPIKey = 'YFPqlSVn05x3toLp7uCsVBi4yD17gZaRs9518cpPZ5Y';
         const searchQuery = '3d world animation';
 
         // Function to fetch and display the hero image
