--- a/harmonix.html
+++ b/harmonix.html
@@ -465,7 +465,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; <span id="currentYear"></span> Your Name</p>
+                <p>&copy; <span id="currentYear"></span> Mbanga Sinkumbwa </p>
             </div>
         </div>
     </footer>
