--- a/harmonix.html
+++ b/harmonix.html
@@ -474,7 +474,7 @@
     <script>
         // Replace 'YOUR_UNSPLASH_API_KEY' with your actual Unsplash API key
         const unsplashAPIKey = 'YFPqlSVn05x3toLp7uCsVBi4yD17gZaRs9518cpPZ5Y';
-        const searchQuery = 'textures';
+        const searchQuery = '3D Renders';
 
         // Function to fetch and display the hero image
         function fetchHeroImage() {
