Added a real project to the list of projects.

--- a/harmonix.html
+++ b/harmonix.html
@@ -503,11 +503,11 @@
         const projects = [
             {
                 category: 'web',
-                title: 'Project 1',
+                title: 'Namibian Toursim',
                 description: 'Description of Project 1.',
-                imageSrc: 'project1.jpg',
-                demoLink: '#',
-                repoLink: '#'
+                imageSrc: 'namibiantourism.png',
+                demoLink: 'https://mrsinkumbwa.github.io/fun/boostrap.html',
+                repoLink: 'https://github.com/mrsinkumbwa/fun.git'
             },
             {
                 category: 'mobile',
