--- a/harmonix.html
+++ b/harmonix.html
@@ -504,7 +504,7 @@
             {
                 category: 'web',
                 title: 'Namibian Tourism',
-                description: 'The Namibian Tourism Website is a dynamic online platform designed to showcase the natural beauty, cultural richness, and adventure opportunities that Namibia has to offer to travelers from around the world. This project aims to provide an engaging and informative digital experience for tourists interested in exploring Namibia, its landscapes, wildlife, and cultural heritage.
+                description: 'The Namibian Tourism Website is a dynamic online platform designed to showcase the natural beauty, cultural richness, and adventure opportunities that Namibia has to offer to travelers from around the world. This project aims to provide an engaging and informative digital experience for tourists interested in exploring Namibia, its landscapes, wildlife, and cultural heritage.' ,
                 imageSrc: 'namibiantourism.png',
                 demoLink: 'https://mrsinkumbwa.github.io/fun/boostrap.html',
                 repoLink: 'https://github.com/mrsinkumbwa/fun.git'
